--- a/index.html
+++ b/index.html
@@ -6,20 +6,30 @@
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.2/dist/mindar-image-aframe.prod.js"></script>
   </head>
   <body>
-    <a-scene mindar-image="imageTargetSrc: ./template3.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
-      <a-assets>
-	<img id="card" src="./Pegunta1.png" />
-	<a-asset-item id="avatarModel" src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.2/examples/image-tracking/assets/card-example/softmind/scene.gltf"></a-asset-item>
-      </a-assets>
+    <a-scene mindar-image="imageTargetSrc:./template4.mind; maxTrack:3" 
+    color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
+      <!-- <a-assets>
+	      <img id="card" src="./Pegunta1.png" />
+      </a-assets> -->
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
+      <!-- PERGUNTA -->
       <a-entity mindar-image-target="targetIndex: 0">
-        <a-plane src="#card" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>
-        <a-gltf-model rotation="0 0 0 " position="0 0 0.1" scale="0.005 0.005 0.005" src="#avatarModel"
-          animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate"
-        >
+        <a-plane id="targetPergunta" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>
+      </a-entity>
+
+      <!-- OPCAO ESQUERDA -->
+      <a-entity mindar-image-target="targetIndex: 1">
+        <a-plane id="targetEsquerda" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>
+      </a-entity>
+
+      <!-- OPCAO DIREITA -->
+      <a-entity mindar-image-target="targetIndex: 2">
+        <a-plane id="targetDireita" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>
       </a-entity>
     </a-scene>
+
+    <script src="./script.js"></script>
   </body>
 </html>
