--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.2/dist/mindar-image-aframe.prod.js"></script>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <a-scene mindar-image="imageTargetSrc:./template4.mind; maxTrack:3" 
+    <a-scene mindar-image="imageTargetSrc:./template3.mind; maxTrack:3" 
     color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
-      <!-- <a-assets>
-	      <img id="card" src="./Pegunta1.png" />
-      </a-assets> -->
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
