--- a/index.html
+++ b/index.html
@@ -7,26 +7,25 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <a-scene mindar-image="imageTargetSrc:./template3.mind; maxTrack:3" 
+    <a-scene mindar-image="imageTargetSrc: https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.2/examples/image-tracking/assets/band-example/band.mind; maxTrack: 2" 
     color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
-      <!-- PERGUNTA -->
-      <a-entity mindar-image-target="targetIndex: 0">
-        <a-plane id="targetPergunta" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>
-      </a-entity>
-
       <!-- OPCAO ESQUERDA -->
-      <a-entity mindar-image-target="targetIndex: 1">
+      <a-entity mindar-image-target="targetIndex: 0">
         <a-plane id="targetEsquerda" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>
       </a-entity>
 
       <!-- OPCAO DIREITA -->
-      <a-entity mindar-image-target="targetIndex: 2">
+      <a-entity mindar-image-target="targetIndex: 1">
         <a-plane id="targetDireita" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>
       </a-entity>
     </a-scene>
+
+    <dialog class="aviso">
+      Escaneie a tela para começar a Jogar!!!
+    </dialog>
 
     <script src="./script.js"></script>
   </body>
