--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.2/dist/mindar-image-aframe.prod.js"></script>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
+  <div class="aviso">
+    Escaneie a tela para começar a Jogar!!!
+  </div>
   <a-scene
     mindar-image="imageTargetSrc: https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.2/examples/image-tracking/assets/band-example/band.mind; maxTrack: 2"
     color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false"
@@ -26,9 +29,7 @@
     </a-entity>
   </a-scene>
 
-  <div class="aviso">
-      Escaneie a tela para começar a Jogar!!!
-  </div>
+  
 
   <script src="./script.js"></script>
 </body>
