--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 </head>
 
 <body>
-  <div class="aviso">
-    <h1>
-      Escaneie a tela para começar a Jogar!!!
-    </h1>
-  </div>
+  <dialog class="aviso">
+    <div class="aviso-modal">
+      <h1>
+        Escaneie a tela para começar a Jogar!!!
+      </h1>
+    </div>
+  </dialog>
   <a-scene
     mindar-image="imageTargetSrc: https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.2/examples/image-tracking/assets/band-example/band.mind; maxTrack: 2"
     color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false"
