--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
     <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
     <!-- OPCAO ESQUERDA -->
-    <a-entity mindar-image-target="targetIndex: 0">
-      <a-plane id="targetEsquerda" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>
+    <a-entity mindar-image-target="targetIndex: 0" id="targetEsquerda">
+      <a-plane position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>
     </a-entity>
 
     <!-- OPCAO DIREITA -->
-    <a-entity mindar-image-target="targetIndex: 1">
-      <a-plane id="targetDireita" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>
+    <a-entity mindar-image-target="targetIndex: 1" id="targetDireita">
+      <a-plane position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>
     </a-entity>
   </a-scene>
-  
+
   <script src="./script.js"></script>
 </body>
 
