--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
   <script>
 
     // const targetPergunta = document.getElementById("targetPergunta");
-    const targetEsquerda = document.querySelector("#targetEsquerda");
-    const targetDireita = document.querySelector("#targetDireita");
+    const targetEsquerda = document.getElementById("targetEsquerda");
+    const targetDireita = document.getElementById("targetDireita");
 
     const booleanPergunta = false;
     const booleanEsquerda = false;
