--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.2/dist/mindar-image-aframe.prod.js"></script>
   <link rel="stylesheet" href="./style.css">
 </head>
@@ -53,7 +54,6 @@
 
     //TARGET ESQUERDA
     targetEsquerda.addEventListener("targetFound", event => {
-      booleanEsquerda = true;
       alert("Esquerda");
     });
     targetEsquerda.addEventListener("targetLost", event => {
@@ -62,7 +62,6 @@
 
     //TARGET DIREITA
     targetDireita.addEventListener("targetFound", event => {
-      booleanDireita = true;
       alert("Direita");
     });
     targetDireita.addEventListener("targetLost", event => {
