--- a/index.html
+++ b/index.html
@@ -21,206 +21,27 @@
     color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false"
     device-orientation-permission-ui="enabled: false">
 
-    <a-camera position="0 0 0" look-controls="enabled: false" cursor="fuse: false; rayOrigin: mouse;" raycaster="near: 10; far: 10000; objects: .clickable"></a-camera>
-
     <!-- OPCAO ESQUERDA -->
+    <a-camera position="0 0 0" look-controls="enabled: false" cursor="fuse: false; rayOrigin: mouse;" raycaster="near: 10; far: 10000; objects: .clickable"></a-camera>
     <a-entity id="targetEsquerda" mindar-image-target="targetIndex: 0">
-      <a-plane position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>
+      <a-plane position="0 0 0" height="0.552" width="1" rotation="0 0 0"  class="clickable">
+        <a-text id="text-first-option"></a-text>
+      </a-plane>
     </a-entity>
 
     <!-- OPCAO DIREITA -->
+    <a-camera position="0 0 0" look-controls="enabled: false" cursor="fuse: false; rayOrigin: mouse;" raycaster="near: 10; far: 10000; objects: .clickable"></a-camera>
     <a-entity id="targetDireita" mindar-image-target="targetIndex: 1">
-      <a-plane position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>
+      <a-plane position="0 0 0" height="0.552" width="1" rotation="0 0 0"  class="clickable">
+        <a-text id="text-second-option"></a-text>
+      </a-plane>
     </a-entity>
+
+
   </a-scene>
 
-  <script>
-
-    // const targetPergunta = document.getElementById("targetPergunta");
-    const targetEsquerda = document.getElementById("targetEsquerda");
-    const targetDireita = document.getElementById("targetDireita");
-
-    const booleanPergunta = false;
-    const booleanEsquerda = false;
-    const booleanDireita = false;
-
-    //TARGET PERGUNTA
-    // document.getElementById("targetPergunta").addEventListener("targetFound", (e) => {
-    //     booleanPergunta = true;
-    // });
-    // document.getElementById("targetPergunta").addEventListener("targetLost", (e) => {
-    //     alert("você perdeu o Messi");
-    // });
-
-    //TARGET ESQUERDA
-    targetEsquerda.addEventListener("targetFound", event => {
-      alert("Esquerda");
-    });
-    targetEsquerda.addEventListener("targetLost", event => {
-      booleanEsquerda = false;
-    });
-
-    //TARGET DIREITA
-    targetDireita.addEventListener("targetFound", event => {
-      alert("Direita");
-    });
-    targetDireita.addEventListener("targetLost", event => {
-      booleanDireita = false;
-    });
-
-    // if (booleanEsquerda == true && booleanDireita == true) {
-    //   //lógica pergunta
-    //   alert("Escaneou");
-    // }
-    // else {
-    //   alert("Você perdeu algum de seus Targets. Para que o jogo volte a funcionar escaneie os três itens!");
-    // }
-
-    // function setLocalStorageTheLastQuestion(index) {
-    //   localStorage.setItem("lastQuestion", JSON.stringify(perguntasTecnologicas[index]));
-    // }
-
-    // function setLocalStorageTheQuestionList(index) {
-    //   localStorage.setItem("questionList", JSON.stringify(perguntasTecnologicas));
-    // }
-    // function setLocalStorageTheGameIsStarted() {
-    //   localStorage.setItem("gameStatus", true);
-    // }
-
-
-    // const perguntasTecnologicas = [
-    //   {
-    //     pergunta: "Qual protocolo é usado para enviar e receber e-mails?",
-    //     opcoes: [
-    //       {
-    //         enunciado: "HTTP",
-    //         respostaCorreta: false
-    //       },
-    //       {
-    //         enunciado: "SMTP",
-    //         respostaCorreta: true
-    //       }
-    //     ],
-    //   },
-    //   {
-    //     pergunta: "O que significa a sigla 'URL'?",
-    //     opcoes: [
-    //       {
-    //         enunciado: "Universal Resource Locator",
-    //         respostaCorreta: true
-    //       },
-    //       {
-    //         enunciado: "Uniform Reference Link",
-    //         respostaCorreta: false
-    //       }
-    //     ],
-    //   },
-    //   {
-    //     pergunta: "Qual linguagem de programação é frequentemente usada para desenvolvimento web?",
-    //     opcoes: [
-    //       {
-    //         enunciado: "CSS",
-    //         respostaCorreta: false
-    //       },
-    //       {
-    //         enunciado: "HTML",
-    //         respostaCorreta: true
-    //       }
-    //     ],
-    //   },
-    //   {
-    //     pergunta: "O que é um firewall em tecnologia?",
-    //     opcoes: [
-    //       {
-    //         enunciado: "Um dispositivo para impressão em rede",
-    //         respostaCorreta: false
-    //       },
-    //       {
-    //         enunciado: "Um sistema de segurança para proteger redes",
-    //         respostaCorreta: true
-    //       }
-    //     ],
-    //   },
-    //   {
-    //     pergunta: "O que é a 'nuvem' em computação?",
-    //     opcoes: [
-    //       {
-    //         enunciado: "Um dispositivo de armazenamento externo",
-    //         respostaCorreta: false
-    //       },
-    //       {
-    //         enunciado: "Um serviço de armazenamento online",
-    //         respostaCorreta: true
-    //       }
-    //     ],
-    //   },
-    //   {
-    //     pergunta: "Qual tag é utilizada para cabeçalho de navegação?",
-    //     opcoes: [
-    //       {
-    //         enunciado: "Nav",
-    //         respostaCorreta: true
-    //       },
-    //       {
-    //         enunciado: "Menu",
-    //         respostaCorreta: false
-    //       }
-    //     ],
-    //   },
-    //   {
-    //     pergunta: "O que é um 'cookie' em termos de tecnologia da informação?",
-    //     opcoes: [
-    //       {
-    //         enunciado: "Um tipo de vírus de computador",
-    //         respostaCorreta: false
-    //       },
-    //       {
-    //         enunciado: "Um pequeno arquivo de dados armazenado no navegador",
-    //         respostaCorreta: true
-    //       }
-    //     ],
-    //   },
-    //   {
-    //     pergunta: "O que é um 'phishing'?",
-    //     opcoes: [
-    //       {
-    //         enunciado: "Uma rede de computadores de alta velocidade",
-    //         respostaCorreta: false
-    //       },
-    //       {
-    //         enunciado: "Uma tentativa de enganar pessoas para obter informações confidenciais",
-    //         respostaCorreta: true
-    //       }
-    //     ],
-    //   },
-    //   {
-    //     pergunta: "Qual é a função principal de um sistema operacional?",
-    //     opcoes: [
-    //       {
-    //         enunciado: "Navegar na internet",
-    //         respostaCorreta: false
-    //       },
-    //       {
-    //         enunciado: "Gerenciar recursos do computador",
-    //         respostaCorreta: true
-    //       }
-    //     ],
-    //   },
-    //   {
-    //     pergunta: "O que significa 'IoT' em tecnologia?",
-    //     opcoes: [
-    //       {
-    //         enunciado: "Internet of Technology",
-    //         respostaCorreta: false
-    //       },
-    //       {
-    //         enunciado: "Internet of Things",
-    //         respostaCorreta: true
-    //       }
-    //     ],
-    //   }
-    // ];
-  </script>
+  <script src="scriptLoop.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
