--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <h1>
         Escaneie a tela para começar a Jogar!!!
       </h1>
+      <button onclick="setGameStart()">Iniciar</button>
     </div>
   </dialog>
   <a-scene
@@ -37,9 +38,7 @@
       </a-plane>
     </a-entity>
 
-
   </a-scene>
-
   <script src="script.js"></script>
 </body>
 
