--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <a-camera position="0 0 0" look-controls="enabled: false" cursor="fuse: false; rayOrigin: mouse;" raycaster="near: 10; far: 10000; objects: .clickable"></a-camera>
     <a-entity id="targetEsquerda" mindar-image-target="targetIndex: 0">
       <a-plane position="0 0 0" height="0.552" width="1" rotation="0 0 0"  class="clickable">
-        <a-text id="text-first-option"></a-text>
+        VASCO VASCO VASCO VASCO VASCO 
       </a-plane>
     </a-entity>
 
@@ -34,7 +34,7 @@
     <a-camera position="0 0 0" look-controls="enabled: false" cursor="fuse: false; rayOrigin: mouse;" raycaster="near: 10; far: 10000; objects: .clickable"></a-camera>
     <a-entity id="targetDireita" mindar-image-target="targetIndex: 1">
       <a-plane position="0 0 0" height="0.552" width="1" rotation="0 0 0"  class="clickable">
-        <a-text id="text-second-option"></a-text>
+        VASCO VASCO VASCO VASCO VASCO 
       </a-plane>
     </a-entity>
 
