--- a/index.html
+++ b/index.html
@@ -25,18 +25,16 @@
     <!-- OPCAO ESQUERDA -->
     <a-camera position="0 0 0" look-controls="enabled: false" cursor="fuse: false; rayOrigin: mouse;" raycaster="near: 10; far: 10000; objects: .clickable"></a-camera>
     <a-entity id="targetEsquerda" mindar-image-target="targetIndex: 0">
-      <a-plane position="0 0 0" height="2" width="3" rotation="0 0 0"  class="clickable">
-        <a-text id="text-first-option" a-text-on-target="targetIndex: 0" value="VASCO VASCO VASCO VASCO VASCO"></a-text>
-      </a-plane>
+      <a-plane position="0 0 0" height="2" width="3" rotation="0 0 0"  class="clickable"></a-plane>
+      <a-text id="text-first-option" a-text-on-target="targetIndex: 0" value="VASCO VASCO VASCO VASCO VASCO"></a-text>
     </a-entity>
 
 
     <!-- OPCAO DIREITA -->
     <a-camera position="0 0 0" look-controls="enabled: false" cursor="fuse: false; rayOrigin: mouse;" raycaster="near: 10; far: 10000; objects: .clickable"></a-camera>
     <a-entity id="targetDireita" mindar-image-target="targetIndex: 1">
-      <a-plane position="0 0 0" height="2" width="3" rotation="0 0 0"  class="clickable">
-        <a-text id="text-second-option" a-text-on-target="targetIndex: 0" value="VASCO VASCO VASCO VASCO VASCO"></a-text>
-      </a-plane>
+      <a-plane position="0 0 0" height="2" width="3" rotation="0 0 0"  class="clickable"></a-plane>
+      <a-text id="text-second-option" a-text-on-target="targetIndex: 0" value="VASCO VASCO VASCO VASCO VASCO"></a-text>
     </a-entity>
 
   </a-scene>
