--- a/index.html
+++ b/index.html
@@ -12,33 +12,22 @@
   <dialog class="aviso">
     <div class="aviso-modal">
       <h1>
-        Escaneie a tela para começar a Jogar!!!
+        Escaneie a Lucky Block para começar a Jogar!!!
       </h1>
-      <button onclick="setGameStart()">Iniciar</button>
     </div>
   </dialog>
-  <a-scene
-    mindar-image="imageTargetSrc: https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.2/examples/image-tracking/assets/band-example/band.mind; maxTrack: 2"
-    color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false"
-    device-orientation-permission-ui="enabled: false">
+  <a-scene mindar-image="imageTargetSrc: https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.2/examples/image-tracking/assets/card-example/card.mind;" 
+  color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
 
     <!-- OPCAO ESQUERDA -->
     <a-camera position="0 0 0" look-controls="enabled: false" cursor="fuse: false; rayOrigin: mouse;" raycaster="near: 10; far: 10000; objects: .clickable"></a-camera>
-    <a-entity id="targetEsquerda" mindar-image-target="targetIndex: 0">
-      <a-plane position="0 0 0" height="2" width="3" rotation="0 0 0"  class="clickable"></a-plane>
-      <a-text id="text-first-option" a-text-on-target="targetIndex: 0" value="VASCO VASCO VASCO VASCO VASCO"></a-text>
+    <a-entity mindar-image-target="targetIndex: 0">
+      <a-box class= "clickable" id="targetInicio"></a-box>
     </a-entity>
 
-
-    <!-- OPCAO DIREITA -->
-    <a-camera position="0 0 0" look-controls="enabled: false" cursor="fuse: false; rayOrigin: mouse;" raycaster="near: 10; far: 10000; objects: .clickable"></a-camera>
-    <a-entity id="targetDireita" mindar-image-target="targetIndex: 1">
-      <a-plane position="0 0 0" height="2" width="3" rotation="0 0 0"  class="clickable"></a-plane>
-      <a-text id="text-second-option" a-text-on-target="targetIndex: 0" value="VASCO VASCO VASCO VASCO VASCO"></a-text>
-    </a-entity>
-
+    
   </a-scene>
   <script src="script.js"></script>
 </body>
 
-</html>
+</html> 
