--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- OPCAO ESQUERDA -->
     <a-camera position="0 0 0" look-controls="enabled: false" cursor="fuse: false; rayOrigin: mouse;" raycaster="near: 10; far: 10000; objects: .clickable"></a-camera>
     <a-entity mindar-image-target="targetIndex: 0">
-      <a-box class="clickable" id="targetInicio"></a-box>
+      <a-gltf-model src="scene.gltf" class="clickable" id="targetInicio"></a-gltf-model>
     </a-entity>
 
     
