--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
   <a-scene mindar-image="imageTargetSrc: https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.2/examples/image-tracking/assets/card-example/card.mind;" 
   color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
+  <a-camera position="0 1 3" fov="40" look-controls="enabled: false" cursor="fuse: false; rayOrigin: mouse;" raycaster="near: 10; far: 10000; objects: .clickable"></a-camera>
 
+</a-scene>
   <a-assets>
     <a-asset-item id="lucky" src="scene.gltf"></a-asset-item>
   </a-assets>
@@ -27,7 +29,7 @@
     <!-- OPCAO ESQUERDA -->
     <a-camera position="0 0 0" look-controls="enabled: false" cursor="fuse: false; rayOrigin: mouse;" raycaster="near: 10; far: 10000; objects: .clickable"></a-camera>
     <a-entity mindar-image-target="targetIndex: 0">
-      <a-gltf-model rotation="0 0 0 " position="0 -0.25 0" scale="0.01 0.01 0.01" src="#lucky" class="clickable">
+      <a-gltf-model rotation="0 0 0 " position="0 -0.25 0" scale="0.05 0.05 0.05" src="#lucky" class="clickable">
     </a-entity>
 
     
