--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- OPCAO ESQUERDA -->
     <a-camera position="0 0 0" look-controls="enabled: false" cursor="fuse: false; rayOrigin: mouse;" raycaster="near: 10; far: 10000; objects: .clickable"></a-camera>
     <a-entity mindar-image-target="targetIndex: 0">
-      <a-gltf-model rotation="0 0 0 " position="0 -0.25 0" scale="0.05 0.05 0.05" src="#lucky" class="clickable">
+      <a-gltf-model scale="0.001 0.001 0.001" position="0 0 0" rotation="0 0 0" src="#lucky" class="clickable">
     </a-entity>
 
     
