--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     <a-camera position="0 0 0" look-controls="enabled: false" cursor="fuse: false; rayOrigin: mouse;" raycaster="near: 10; far: 10000; objects: .clickable"></a-camera>
     <a-entity mindar-image-target="targetIndex: 0">
       <!-- <a-gltf-model scale="0.001 0.001 0.001" position="0 0 0" rotation="0 0 0" src="#lucky" class="clickable"> -->
-        <a-box id="quadrado1" class="clickable" position="-1 1 -3"> bgfb  </a-box>
+        <a-box id="quadrado1" class="clickable"> bgfb  </a-box>
     </a-entity>
 
     <a-entity mindar-image-target="targetIndex: 1">
-        <a-box id="quadrado2" class="clickable" position="1 1 -3"></a-box>
+        <a-box id="quadrado2" class="clickable"></a-box>
     </a-entity>
 
     
