--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- OPCAO ESQUERDA -->
     <a-camera position="0 0 0" look-controls="enabled: false" cursor="fuse: false; rayOrigin: mouse;" raycaster="near: 10; far: 10000; objects: .clickable"></a-camera>
     <a-entity mindar-image-target="targetIndex: 0" position="-1 1 -3">
-      <a-gltf-model width="0.1" height="auto" scale="0.001 0.001 0.001" position="0 0 0" rotation="0 0 0" src="#lucky" class="clickable">
+      <a-gltf-model scale="0.01 0.01 0.01" position="0 0 0" rotation="0 0 0" src="#lucky" class="clickable">
         <!-- <a-box id="quadrado1" class="clickable"></a-box> -->
     </a-entity>
 
