--- a/index.html
+++ b/index.html
@@ -17,26 +17,45 @@
     </div>
   </dialog>
 
+  <dialog class="show-score">
+    <div class="square">
+      <h2>Score: <span id="score">0</span></h2>
+    </div>
+  </dialog>
+
+
+
   <a-scene mindar-image="imageTargetSrc: https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.2/examples/image-tracking/assets/card-example/card.mind;" 
   color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
 
   <a-assets>
-    <a-asset-item id="lucky" src="scene.gltf"></a-asset-item>
+    <img id="lucky" src="luckyblock.png"> 
   </a-assets>
 
     <!-- OPCAO ESQUERDA -->
     <a-camera position="0 0 0" look-controls="enabled: false" cursor="fuse: false; rayOrigin: mouse;" raycaster="near: 10; far: 10000; objects: .clickable"></a-camera>
+
     <a-entity mindar-image-target="targetIndex: 0" position="-1 1 -3">
-      <a-gltf-model scale="0.01 0.01 0.01" position="0 0 0" rotation="0 0 0" src="#lucky" class="clickable">
-        <!-- <a-box id="quadrado1" class="clickable"></a-box> -->
+      <a-plane scale="0.01 0.01 0.01" position="0 0 0" rotation="0 0 0" src="#lucky" class="clickable">
     </a-entity>
-
-    <a-entity mindar-image-target="targetIndex: 1" position="0 1 -3">
-        <a-box id="quadrado2" class="clickable"></a-box>
-    </a-entity>
-
-    
   </a-scene>
+
+  <section class="central-section hidden" id="section-question">
+    <!-- Pergunta -->
+    <div class="question"></div>
+    <!-- Opcoes -->
+    <div class="grid-options">
+      <!-- Esquerda -->
+      <div class="grid-option">
+        <span id="left-option" onclick="questionAnswer('left')"></span>
+      </div>
+      <!-- Direita -->
+      <div class="grid-option">
+        <span id="right-option" onclick="questionAnswer('right')"></span>
+      </div>
+    </div>
+  </section>
+
   <script src="script.js"></script>
 </body>
 
