--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
 
   <a-assets>
-    <img id="lucky" src="luckyblock.png"> 
+    <img id="lucky" src="./luckyblock.png"> 
   </a-assets>
 
     <!-- OPCAO ESQUERDA -->
