--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- OPCAO ESQUERDA -->
     <a-camera position="0 0 0" look-controls="enabled: false" cursor="fuse: false; rayOrigin: mouse;" raycaster="near: 10; far: 10000; objects: .clickable"></a-camera>
 
-    <a-entity mindar-image-target="targetIndex: 0" position="-1 1 -3">
+    <a-entity mindar-image-target="targetIndex: 0">
       <a-plane position="0 0 0" height="0.552" width="1" rotation="0 0 0" src="#lucky" class="clickable" id="luckyPlane">
     </a-entity>
   </a-scene>
