--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
 
-  <a-scene mindar-image="imageTargetSrc: https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.2/examples/image-tracking/assets/card-example/card.mind;" 
+  <a-scene mindar-image="imageTargetSrc: ./luckyblock.mind;" 
   color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
 
   <a-assets>
