--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <dialog class="aviso">
     <div class="aviso-modal">
       <h1>
-        Escaneie a Lucky Block para começar a Jogar!!!
+        <!-- Escaneie a Lucky Block para começar a Jogar!!! -->
+        Vasco
       </h1>
     </div>
   </dialog>
