--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
   <dialog class="aviso">
     <div class="aviso-modal">
       <h1>
-        <!-- Escaneie a Lucky Block para começar a Jogar!!! -->
-        Vasco
+        Escaneie a Lucky Block para começar a Jogar!!!
       </h1>
     </div>
   </dialog>
