--- a/index.html
+++ b/index.html
@@ -25,18 +25,21 @@
 
 
 
-  <a-scene mindar-image="imageTargetSrc: ./luckyblock.mind;" 
-  color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
+  <a-scene mindar-image="imageTargetSrc: ./luckyblock.mind;" color-space="sRGB"
+    renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false"
+    device-orientation-permission-ui="enabled: false">
 
-  <a-assets>
-    <img id="lucky" src="./imagemRA.jpg"> 
-  </a-assets>
+    <a-assets>
+      <img id="lucky" src="./imagemRA.jpg">
+    </a-assets>
 
     <!-- OPCAO ESQUERDA -->
-    <a-camera position="0 0 0" look-controls="enabled: false" cursor="fuse: false; rayOrigin: mouse;" raycaster="near: 10; far: 10000; objects: .clickable"></a-camera>
+    <a-camera position="0 0 0" look-controls="enabled: false" cursor="fuse: false; rayOrigin: mouse;"
+      raycaster="near: 10; far: 10000; objects: .clickable"></a-camera>
 
     <a-entity mindar-image-target="targetIndex: 0">
-      <a-plane position="0 0 0" height="0.552" width="1" rotation="0 0 0" src="#lucky" class="clickable" id="luckyPlane"></a-plane>
+      <a-plane position="0 0 0" height="0.552" width="1" rotation="0 0 0" src="#lucky" class="clickable"
+        id="luckyPlane"></a-plane>
     </a-entity>
   </a-scene>
 
@@ -59,4 +62,4 @@
   <script src="script.js"></script>
 </body>
 
-</html> 
+</html>
