--- a/index.html
+++ b/index.html
@@ -45,16 +45,22 @@
 
   <section class="central-section hidden" id="section-question">
     <!-- Pergunta -->
-    <div class="question"></div>
+    <div class="question">
+      pergunta
+    </div>
     <!-- Opcoes -->
     <div class="grid-options">
       <!-- Esquerda -->
       <div class="grid-option">
-        <span id="left-option" onclick="questionAnswer('left')"></span>
+        <span id="left-option" onclick="questionAnswer('left')">
+          esquerda
+        </span>
       </div>
       <!-- Direita -->
       <div class="grid-option">
-        <span id="right-option" onclick="questionAnswer('right')"></span>
+        <span id="right-option" onclick="questionAnswer('right')">
+        esquerda
+      </span>
       </div>
     </div>
   </section>
