--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </a-entity>
   </a-scene>
 
-  <section class="central-section hidden" id="section-question">
+  <section class="central-section" id="section-question">
     <!-- Pergunta -->
     <div class="question">
       pergunta
