--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <dialog class="aviso">
+  <!-- <dialog class="aviso">
     <div class="aviso-modal">
       <h1>
         Escaneie a Lucky Block para começar a Jogar!!!
@@ -21,8 +21,8 @@
     <div class="square">
       <h2>Score: <span id="score">0</span></h2>
     </div>
-  </dialog>
-  
+  </dialog> -->
+
   <section class="central-section" id="section-question">
     <!-- Pergunta -->
     <div class="question">
