--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
   </dialog> -->
 
-  <section class="central-section" id="section-question">
+  <section class="central-section hidden" id="section-question">
     <!-- Pergunta -->
     <div class="question">
       pergunta
@@ -32,12 +32,14 @@
     <div class="grid-options">
       <!-- Esquerda -->
       <div class="grid-option">
+        1
         <span id="left-option" onclick="questionAnswer('left')">
           esquerda
         </span>
       </div>
       <!-- Direita -->
       <div class="grid-option">
+        2
         <span id="right-option" onclick="questionAnswer('right')">
         esquerda
       </span>
