--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </dialog> -->
 
   <section class="central-section hidden" id="section-question">
-    <!-- Pergunta -->
+    <!-- Pergunt -->
     <div class="question">
       pergunta
     </div>
