--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
   </dialog> -->
 
-  <section class="central-section" id="section-question">
+  <section class="central-section hidden" id="section-question">
     <!-- Pergunt -->
     <div class="question">
       pergunta
