--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
   </dialog> -->
 
-  <section class="central-section hidden" id="section-question">
+  <div class="central-section hidden" id="section-question">
     <!-- Pergunt -->
     <div class="question">
       pergunta
@@ -45,7 +45,7 @@
       </span>
       </div>
     </div>
-  </section>
+  </div>
 
 
   <a-scene mindar-image="imageTargetSrc: ./luckyblock.mind;" color-space="sRGB"
