--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
         <!-- Esquerda -->
         <div class="grid-option">
           1
-          <span id="left-option" onclick="questionAnswer('left')">
+          <p id="left-option" onclick="questionAnswer('left')">
             esquerda
-          </span>
+          </p>
         </div>
         <!-- Direita -->
         <div class="grid-option">
           2
-          <span id="right-option" onclick="questionAnswer('right')">
+          <p id="right-option" onclick="questionAnswer('right')">
             esquerda
-          </span>
+          </p>
         </div>
       </div>
     </div>
