--- a/index.html
+++ b/index.html
@@ -23,37 +23,9 @@
     </div>
   </dialog> -->
 
-  <div class="hidden" id="section-question">
-    <div class="central-section">
-      <!-- Pergunt -->
-      <div class="question">
-        pergunta
-      </div>
-      <!-- Opcoes -->
-      <div class="grid-options">
-        <!-- Esquerda -->
-        <div class="grid-option">
-          1
-          <p id="left-option" onclick="questionAnswer('left')">
-            esquerda
-          </p>
-        </div>
-        <!-- Direita -->
-        <div class="grid-option">
-          2
-          <p id="right-option" onclick="questionAnswer('right')">
-            esquerda
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
-
   <a-scene mindar-image="imageTargetSrc: ./luckyblock.mind;" color-space="sRGB"
     renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false"
-    device-orientation-permission-ui="enabled: false" id="scan">
+    device-orientation-permission-ui="enabled: false">
 
     <a-assets>
       <img id="lucky" src="./imagemRA.jpg">
