--- a/pergunta.html
+++ b/pergunta.html
@@ -10,7 +10,7 @@
     <div class="central-section">
       <!-- Pergunt -->
       <div class="question">
-        pergunta
+        <p id="question-p">pergunta</p>
       </div>
       <!-- Opcoes -->
       <div class="grid-options">
