--- a/pergunta.html
+++ b/pergunta.html
@@ -15,16 +15,16 @@
       <!-- Opcoes -->
       <div class="grid-options">
         <!-- Esquerda -->
-        <div class="grid-option">
+        <div class="grid-option" onclick="questionAnswer('left')">
           1
-          <p id="left-option" onclick="questionAnswer('left')">
+          <p id="left-option">
             esquerda
           </p>
         </div>
         <!-- Direita -->
-        <div class="grid-option">
+        <div class="grid-option" onclick="questionAnswer('right')">
           2
-          <p id="right-option" onclick="questionAnswer('right')">
+          <p id="right-option">
             esquerda
           </p>
         </div>
