--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <!-- <dialog class="aviso">
+  <dialog class="aviso">
     <div class="aviso-modal">
       <h1>
         Escaneie a Lucky Block para começar a Jogar!!!
@@ -21,7 +21,7 @@
     <div class="square">
       <h2>Score: <span id="score">0</span></h2>
     </div>
-  </dialog> -->
+  </dialog>
 
   <a-scene mindar-image="imageTargetSrc: ./luckyblock.mind;" color-space="sRGB"
     renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false"
