--- a/pergunta.html
+++ b/pergunta.html
@@ -17,16 +17,12 @@
         <!-- Esquerda -->
         <div class="grid-option" onclick="questionAnswer('left')">
           1
-          <p id="left-option">
-            esquerda
-          </p>
+          <p id="left-option"></p>
         </div>
         <!-- Direita -->
         <div class="grid-option" onclick="questionAnswer('right')">
           2
-          <p id="right-option">
-            esquerda
-          </p>
+          <p id="right-option"></p>
         </div>
       </div>
     </div>
