--- a/camera/index.html
+++ b/camera/index.html
@@ -15,12 +15,12 @@
     </div>
   </dialog>
 
-  <a-scene mindar-image="imageTargetSrc: ./luckyblock.mind;" color-space="sRGB"
+  <a-scene mindar-image="imageTargetSrc: ../assets/luckyblock.mind;" color-space="sRGB"
     renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false"
     device-orientation-permission-ui="enabled: false">
 
     <a-assets>
-      <img id="lucky" src="./imagemRA.jpg">
+      <img id="lucky" src="../assets/imagemRA.jpg">
     </a-assets>
 
     <!-- OPCAO ESQUERDA -->
