--- a/pergunta/pergunta.html
+++ b/pergunta/pergunta.html
@@ -28,7 +28,7 @@
     </div>
   </div>
 
-  <script src="scriptPergunta.js"></script>
+  <script src="./scriptPergunta.js"></script>
 </body>
 
 </html>
