--- a/pergunta/pergunta.html
+++ b/pergunta/pergunta.html
@@ -10,17 +10,17 @@
     <div class="central-section">
       <!-- Pergunt -->
       <div class="question">
-        <p id="question-p">pergunta</p>
+        <p id="question-p">Pergunta</p>
       </div>
       <!-- Opcoes -->
       <div class="grid-options">
         <!-- Esquerda -->
-        <div class="grid-option" onclick="questionAnswer('left')">
+        <div class="grid-option lado1" onclick="questionAnswer('left')">
           1
           <p id="left-option"></p>
         </div>
         <!-- Direita -->
-        <div class="grid-option" onclick="questionAnswer('right')">
+        <div class="grid-option lado2" onclick="questionAnswer('right')">
           2
           <p id="right-option"></p>
         </div>
