--- a/camera/index.html
+++ b/camera/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <dialog class="aviso">
-    <h4>Voltar</h4>
+    <a onclick="backAndReset()">Voltar</a>
     <div class="aviso-modal">
       <h2>Score: <span id="score"></span></h2>
     </div>
