--- a/camera/index.html
+++ b/camera/index.html
@@ -10,8 +10,8 @@
 
 <body>
   <dialog class="aviso">
-    <a onclick="backAndReset()">Voltar</a>
     <div class="aviso-modal">
+      <button onclick="backAndReset()">Voltar</button>
       <h2>Score: <span id="score"></span></h2>
     </div>
   </dialog>
