--- a/menuInicial/menuInicial.html
+++ b/menuInicial/menuInicial.html
@@ -57,10 +57,7 @@
 
 
     <script>
-        // if (localStorage.getItem("choiceList") != null) {
-        //     console.log("go scan")
-        //     goScan();
-        // }
+        localStorage.clear();
 
         function questionListSelected(indexList) {
             localStorage.setItem("choiceList", indexList);
