--- a/camera/index.html
+++ b/camera/index.html
@@ -11,7 +11,7 @@
 <body>
   <dialog class="aviso">
     <div class="aviso-modal">
-      <h2>Score: <span id="score"></span></h2>
+      <h2><span id="kind"></span> Score: <span id="score"></span></h2>
     </div>
   </dialog>
 
